--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.TaskManagementApp"
         tools:targetApi="31">
         <activity
+            android:name=".AddTask"
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan"/>
+        <activity
             android:name=".HomeActivity"
             android:exported="false" />
         <activity
